--- a/public/movie-ranking-Tanja.html
+++ b/public/movie-ranking-Tanja.html
@@ -1,5 +1,12 @@
-<!-- Write your code below -->
-<h1>The Best Movies According to Tanja</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>The Best Movies According to Tanja</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
 <h3>Pride & Prejudice</h3>
@@ -8,3 +15,5 @@
 <p>Love conquers all. Bruce Willis and Milla Jovovich best looking couple ever!</p>
 <h3>Love Actually</h3>
 <p>I've watched it like hundred times. And I will again!</p>
+</body>
+</html>
